Handle .co.uk domains
