# whois-node/src/api/whois.js
@@ -15,6 +15,38 @@ function toTimestamp(dateString) {
   return null;
 }
 
+async function parseUkDomain(whoisResult, domain) {
+  const strToDate = (dateString) => moment.utc(dateString, 'DD-MMM-YYYY').unix()
+  if (whoisResult) {
+    const parts = whoisResult["_raw"].split("\n");
+    let registeredOn, expiryDate, updatedAt;
+    let relevantDates = false;
+    for (let i = 0; i < parts.length; i++) {
+      const line = parts[i].replace("\r", "").replace("\n", "").trim()
+      if (line.startsWith("Relevant dates:")) {
+        relevantDates = true;
+        continue;
+      }
+      if (relevantDates) {
+        if (line.startsWith("Registered on:")) {
+          registeredOn = strToDate(line.split("Registered on:")[1].trim());
+        } else if (line.startsWith("Expiry date:")) {
+          expiryDate = strToDate(line.split("Expiry date:")[1].trim());
+        } else if (line.startsWith("Last updated:")) {
+          updatedAt = strToDate(line.split("Last updated:")[1].trim());
+        }
+      }
+    }
+    return {
+      domainName: registeredOn && updatedAt && expiryDate ? domain : null,
+      createdAt: registeredOn,
+      updatedAt: updatedAt,
+      expiresAt: expiryDate
+    }
+  }
+  return {}
+}
+
 async function whoisLookup(domain) {
   var proxyIp = '82.165.209.112';
   var proxyPort = 1080;
@@ -28,8 +60,10 @@ async function whoisLookup(domain) {
   };
   var res = await whoisClient(domain, true, options);
 
-  // console.log(res)
-  console.log(res.parsedData);
+  console.debug(res.parsedData);
+  if (domain.endsWith(".co.uk")) {
+    return await parseUkDomain(res, domain)
+  }
   if (res["parsedData"]) {
     return {
       domainName: res["parsedData"]["Domain Name"],
